All 67 units under abacus-da-all/src/main/java (~80k lines) — note the repo root has no src/main/java; that module is the real source root. Split into 21 slices, one read-only reviewer each, with me as sole editor verifying every finding by execution or bytecode before touching anything. Ledger: scripts/review_2026-07-25/.
Most important finding about the state of your tree: the large
uncommitted change was labelled a Javadoc rewrite, but seven files
carried unreviewed code changes — CqlBuilder's CQL-validity hardening,
Cosmos's ~300 lines of new SQL-rewrite machinery plus a
raw-SQL→positional-parameter switch, Neo4j's eager session release, new
HBase guards, DynamoDB Filters.in guards, and BigQuery's LIMIT 1. All
verified correct except the Cosmos defects below.

Code bugs fixed (4, each with regression tests)

1. [P1] Cosmos IS NULL rewrite silently returned zero rows. The operand
scan matched clause boundaries case-sensitively while keyword detection
used regionMatches(true, …). A lowercase or/and wasn't seen as a
boundary, so price = 1 or category IS NULL became IS_NULL(c.price = 1 or
c.category). Cosmos accepts IS_NULL(<boolean>) and evaluates it false —
wrong results, no exception.
2. [P2] Cosmos: NOT wasn't a boundary → NOT x IS NULL became IS_NULL(NOT
c.x), also silently false.
3. [P2] CqlBuilder.onlyIf(Condition) wasn't transactional. The new
hardening made condition rendering throw in ~10 more cases, but onlyIf
had already emitted " IF " and doesn't run inside the parent's atomic
mutation. After a rejected condition, build() silently returned corrupt
CQL (… IF , … IF s IN (?, ) with stale bind values.
4. [P2] ParsedCql dropped the parameter of a single-field UDT literal.
{street::street} is one token with balanced braces, so the depth gate
never fired — while the multi-field form worked. The emitted CQL then
mixed a native :street marker with ?, which Cassandra rejects.

For #4 I did not trust my own reasoning alone: that gate exists because
of two previou